--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <section id="description">
         <div class="container">
             <p>Welcome to Treynds, your gateway to the evolving world of technology and trends. Stay ahead with the latest insights, innovations, and advancements that are shaping our future. From AI to IoT, and from digital transformation to the latest gadgets, Treynds brings you the pulse of what's next. Explore the trends, embrace the technology.</p>
+            <p>Get in Touch: info at treynds dot com</p>
         </div>
     </section>
 
